deployment/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gruppenname-frontend-runner
  namespace: sachs
  labels:
    app: gruppenname-frontend-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gruppenname-frontend-runner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gruppenname-frontend-runner
    spec:
      containers:
        - name: github-runner
          image: tcardonne/github-runner
          securityContext:
            privileged: true
          volumeMounts:
            - name: work
              mountPath: "/tmp/gruppenname-frontend-runner"
            - name: dockersock
              mountPath: "/var/run/docker.sock"
      volumes:
        - name: work
          hostPath:
            path: "/tmp/gruppenname-frontend-runner"
        - name: dockersock
          hostPath:
            path: "/var/run/docker.sock"
