deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gruppenname-frontend-service
spec:
  ports:
    - port: 8080
  selector:
    app: gruppenname-frontend
