deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gruppenname-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: "gruppenname-frontend-ingress-demo-tls"
      hosts:
        - "gruppenname.app.datexis.com"
  rules:
    - host: "gruppenname.app.datexis.com"
      http:
        paths:
          - path:
            backend:
              serviceName: gruppenname-frontend-service
              servicePort: 8080
